add_executable(ActsAutodiffAlignmentCaseStudyTest case_study_test.cpp)
target_link_libraries(ActsAutodiffAlignmentCaseStudyTest PRIVATE ActsCore ActsExamplesFramework ActsExamplesCommon ActsExamplesAlignment ActsAlignment)

install(TARGETS ActsAutodiffAlignmentCaseStudyTest RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})



add_executable(ActsAutodiffAlignmentPluginTest plugin_test.cpp)
target_link_libraries(ActsAutodiffAlignmentPluginTest PRIVATE ActsCore ActsExamplesFramework ActsExamplesCommon ActsExamplesAlignment ActsAlignment ActsPluginAutodiff)

install(TARGETS ActsAutodiffAlignmentPluginTest RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})



add_executable(ActsAutodiffHelperTest helper_test.cpp)
target_link_libraries(ActsAutodiffHelperTest PRIVATE ActsCore ActsPluginAutodiff)

install(TARGETS ActsAutodiffHelperTest RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

